--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,15 @@
    text-align: center;
 }
 
-
+#jf1 {
+   display: block;
+   max-width: 200px;
+   max-height: 350px;
+   width: auto;
+   height: auto;
+   transform: rotate(90deg);
+   margin-left: auto;
+   margin-right: auto;
+}
 
 
