--- a/css/main.css
+++ b/css/main.css
@@ -13,4 +13,30 @@
    margin-right: auto;
 }
 
+ul {
+   list-style-type: none;
+}
 
+#badge {
+   display: block;
+   max-width: 200px;
+   max-height: 350px;
+   width: auto;
+   height: auto;
+   transform: rotate(90deg);
+   margin-left: auto;
+   margin-right: auto;
+}
+
+#container {
+   width: 900px;
+   margin-left: auto;
+   margin-right: auto;
+   text-align: center;
+}
+
+#floated {
+   float: left;
+   width: 200px;
+   height: 350px;
+}
