--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,9 @@ ul {
   width: 150px;
   height: 150px;
 }
+#floated1 {
+  margin-left: auto;
+  margin-right: auto;
+  width: 150px;
+  height: 200px;
+}
