--- a/css/main.css
+++ b/css/main.css
@@ -4,14 +4,15 @@
 
 #jf1 {
    display: block;
-   max-width: 200px;
-   max-height: 350px;
+   max-width: 144px;
+   max-height: 126px;
    width: auto;
    height: auto;
    transform: rotate(90deg);
+   float: left;
    margin-top: 30px;
    margin-bottom: 30px;
-   margin-right: 50px;
+   margin-right: 30px;
    margin-left: 50px;
 }
 
@@ -32,7 +33,6 @@ ul {
    float: left;
    margin-top: 30px;
    margin-bottom: 30px;
-   margin-right: 50px;
+   margin-right: 40px;
    margin-left: 50px;
 }
-
